@@ -4,7 +4,8 @@
  to the users internet connectivity.  This is especially useful in broad, city      
  scale areas with dense AP population.                                              
 
-2007-02-12 (mathilda)
+2007-02-13
+- autoap_wepkeys now takes the same format as autoap_prefssid. Connecting to known networks with wep keys is much much faster! 
 - only try to connect to preferred net if it got detected in scan
 
 2007-02-08 (mathilda)
